# saimiris-gateway

./: .dockerignore  .env.development  .env.production  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  renovate.json
.github/workflows/: cicd.yml  claude-review.yml  claude.yml  clean.yml
benches/: deserialization_benchmark.rs  probes_benchmark.rs
integration/: README.md  compose.yml
integration/config/agent/: agent.yml
integration/config/gateway/: gateway.yml
integration/config/redpanda/: redpanda.yml
integration/tests/: test_probe_pipeline.sh  test_submit_integration.sh  test_submit_probes.sh
migrations/: 20250629000001_create_probe_usage_table.sql  20250630000001_create_user_limits_table.sql  20250701000001_create_user_id_mappings_table.sql  20250718000001_create_measurement_tracking.sql  20260619000001_add_measurement_cancellation.sql
schemas/: probe.capnp
src/: agent.rs  database.rs  jwt.rs  kafka.rs  lib.rs  main.rs  mtls.rs  probe.rs  probe_capnp.rs
tests/: agent_api_key.rs  agent_integration.rs  agent_metadata_response.rs  agent_unit.rs  api_key_tests.rs  async_user_id.rs  common.rs  error_response.rs  integration_tests.rs  mtls_tests.rs  user_id.rs  user_prefixes.rs
tests/certs/: test-ca.pem  test-ca.srl  test-client-key.pem  test-client.csr  test-client.pem  test-key.pem
