[package]
name = "saimiris-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = {version = "3.0.2", features = ["tracing"]}
dotenv = "0.15"
jsonwebtoken = "9.0"
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.21.3"
uuid = { version = "1.7", features = ["v4", "serde"] }

[dev-dependencies]
axum-test = "17.0"
criterion = "0.6"

[[bench]]
name = "deserialization_benchmark"
harness = false

[[bin]]
name = "generate_test_json"
path = "bin/generate_test_json.rs"
